# 2d_dec_dirac

./: CMakeLists.txt  README.md  dec_2d_square_centered_cvg.txt  dec_2d_tria_cvg.txt  dec_2d_tria_cvg_pert.txt  extract_errors.py  plot_meshes.py  plot_vtk.py  runme.sh
inc/: arnoldi.hpp  bary.hpp  bd.hpp  cochain.hpp  dec.hpp  dirac.hpp  diracmg.hpp  error.hpp  hierarchy.hpp  incidence.hpp  mesh.hpp
meshes/: L_centered.msh  L_uncentered.msh  annulus.msh  square_uncentered.msh  tria.msh
src/: CMakeLists.txt  bary.cpp  bary_low_order.cpp  bd.cpp  cochain.cpp  dec.cpp  dirac.cpp  diracmg.cpp  error.cpp  hierarchy.cpp  incidence.cpp  mesh.cpp
targets/: CMakeLists.txt  test.cpp  test.sh  test_L_cvg.cpp  test_arnoldi.cpp  test_cvg.sh  test_interp.cpp  test_mg.cpp  test_mg_powerit.cpp  test_square_cvg.cpp  test_tria_cvg.cpp  test_tria_cvg_pert.cpp
